--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flores Para Fanny</title>
+    <title>Flores para Fanny</title>
+    <!-- Meta tags para la vista previa del enlace -->
+    <meta property="og:title" content="Campo de Girasoles con Letra y Notas Musicales">
+    <meta property="og:description" content="Vicente Aguilar te ha enviado un regalo.">
+    <meta property="og:image" content="ttps://i.imgur.com/FY77iIN.jpeg"> <!-- URL de la imagen -->
+    <meta property="og:url" content="https://vicenteagt.github.io/Flores-Para-Fanny/">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="flower-container"></div>
-    <div id="header">Feliz Viernes 21 de marzo Fanny :)</div> 
     <div id="lyrics-container">
+        <div id="header">Feliz Viernes 21 de marzo Fanny :)</div>
         <p class="lyric">🎵 No te apures, no detengas 🎵</p>
         <p class="lyric">🎵 El instante del encuentro 🎵</p>
         <p class="lyric">🎵 Está dicho que es un hecho 🎵</p>
