--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flores para Fanny</title>
     <!-- Meta tags para la vista previa del enlace -->
-    <meta property="og:title" content="Campo de Girasoles con Letra y Notas Musicales">
+    <meta property="og:title" content="Flores amarillas para Fanny">
     <meta property="og:description" content="Vicente Aguilar te ha enviado un regalo.">
     <meta property="og:image" content="ttps://i.imgur.com/FY77iIN.jpeg"> <!-- URL de la imagen -->
     <meta property="og:url" content="https://vicenteagt.github.io/Flores-Para-Fanny/">
