--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Meta tags para la vista previa del enlace -->
     <meta property="og:title" content="Flores amarillas para Fanny">
     <meta property="og:description" content="Vicente Aguilar te ha enviado un regalo.">
-    <meta property="og:image" content="ttps://i.imgur.com/FY77iIN.jpeg"> <!-- URL de la imagen -->
+    <meta property="og:image" content="https://i.imgur.com/FY77iIN.jpeg"> <!-- URL de la imagen -->
     <meta property="og:url" content="https://vicenteagt.github.io/Flores-Para-Fanny/">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="styles.css">
